<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LandscapeActivity">

    <fragment
        android:id="@+id/landscape_image_fragment"
        android:name="com.github.panarik.smartFeatures.data.landscape.LandscapeImageFragment"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        tools:layout="@layout/fragment_landscape_image" />

    <fragment
        android:id="@+id/landscape_button_fragment"
        android:name="com.github.panarik.smartFeatures.data.landscape.LandscapeButtonFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        tools:layout="@layout/fragment_landscape_button" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- в нём управляющие кнопки-->
        <LinearLayout
            android:id="@+id/landscape_controlLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/landscape_addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickOperateFragment"
                android:text="Добавить" />
            <Button
                android:id="@+id/landscape_removeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickOperateFragment"
                android:text="Удалить" />
            <Button
                android:id="@+id/landscape_replaceButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickOperateFragment"
                android:text="Заменить" />
        </LinearLayout>

        <!-- в него подгружаем новые фрагменты -->
        <LinearLayout
            android:id="@+id/landscape_containerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/landscape_controlLayout"
            android:orientation="vertical"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/landscape_containerLayout">
            <Switch
                android:id="@+id/toPreviousFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="service button {Back} to previous fragment"
                android:layout_alignParentBottom="true"
                android:padding="15dp"/>
        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>