<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/landscape_one_fragment_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CDDC39"
        android:gravity="center"
        android:text="Fragment One"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

</LinearLayout>