<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.panarik.smartFeatures.activity.SignInActivity"
    android:id="@+id/activity_sign_in">

    <ImageView
        android:id="@+id/sign_in_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:src="@drawable/auth250" />

    <EditText
        android:id="@+id/chat_nameEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_logo"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:hint="Your Name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/chat_emailEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/chat_nameEditText"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:hint="Your Email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/chat_passwordEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/chat_emailEditText"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:hint="Your Password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/chat_passwordConfirmEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/chat_passwordEditText"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:hint="Confirm Password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/chat_loginSignUpButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@id/sign_in_logo"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_toRightOf="@id/chat_nameEditText"
        android:textSize="15sp"
        android:text="Sign Up" />

    <TextView
        android:id="@+id/chat_toggleSingUpTextView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@id/chat_loginSignUpButton"
        android:layout_alignLeft="@id/chat_loginSignUpButton"
        android:clickable="true"
        android:gravity="center"
        android:onClick="chat_toggleLoginMode"
        android:textSize="15sp"
        android:text="Tap to Log In" />

    <Button
        android:id="@+id/sign_in_without_auth"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/chat_passwordConfirmEditText"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:text="Продолжить Без Регистрации"
        android:onClick="goToMainActivity"
        tools:ignore="OnClick" />

</RelativeLayout>