<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.github.panarik.smartFeatures.activity.VideoWebActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@android:color/white">

        <EditText
            android:id="@+id/editNameMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_centerVertical="true"
            android:hint="Название фильма"
            android:ems="10"
            android:inputType="textPersonName" />
        <Button
            android:id="@+id/searchMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/editNameMovie"
            android:text="Поиск!"
            android:focusable="true"
            android:onClick="toSearchMovie"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/videoWebView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardview_dark_background" />

        <ImageView
            android:id="@+id/videoLocal_backImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:clickable="true"
            android:onClick="goToMainActivity"
            android:src="@drawable/back"
            android:textSize="20sp" />

    </RelativeLayout>


</LinearLayout>