<resources>
    <string name="app_name">Smart Features</string>

    <string name="item_element_text">Superman Returns</string>
    <string name="freeGameActivity_tryAgainButton">Try Again :)</string>
    <string name="freeGameActivity_clickOnChest">Click on chest!</string>
    <string name="menu_options">MENU OPTIONS</string>

    <string name="TipsCalcActivity_cost_of_service">Cost of Service</string>
    <string name="TipsCalcActivity_how_was_the_service">How was the service?</string>
    <string name="TipsCalcActivity_amazing_20">Amazing (20%)</string>
    <string name="TipsCalcActivity_good_15">Good (15%)</string>
    <string name="TipsCalcActivity_ok_10">Okay (10%)</string>
    <string name="TipsCalcActivity_round_up_tip">Round up tip</string>
    <string name="TipsCalcActivity_calculate">Calculate</string>
    <string name="TipsCalcActivity_tip_amount">Tip Amount</string>

</resources>
